--- a/views/home.jade
+++ b/views/home.jade
@@ -27,7 +27,7 @@ html
 				div(style="float:right;") Schedular
 			br
 			p(class="subTitle") a course planning platform for kind people
-			p(class="subTitle") now in UFV and SFU
+			p(class="subTitle") now in UFV
 			a(href="/u/signup")
 				button(id="callToAction") Sign Me Up!
 	a(href="http://www.facebook.com/schedular")
