--- a/views/main/build.jade
+++ b/views/main/build.jade
@@ -3,48 +3,45 @@ extends ../MainTemplate
 block headContent
 	link(rel="stylesheet",href="/css/build.main.css")
 	title="Schedule Builder"
-	style.
-		.date-0{
-			border-left-color:transparent;
-		}
-		.seasonToolTip{
-			font-family:Open Sans;
-			font-size:12px;
-			font-weight:100;
-			color:#FFF;
-			background-color:#2c3e50;
-			padding:5px;
-			border-radius:3px;
-			position:absolute;
-		}
-		.pushed{
-			box-shadow:0px 0px 3px #999 inset;
-		}
-
 block bodyContent
-	div(id="crnBar-wrap" )
-		input#instantInput.material(style="width:200px;color:#222;background:#EEE;border:0;padding:7px;outline:0;font-family:Open Sans;font-size:11px;margin-top:10px;" placeholder="Type to find more courses")
-		input.material(style="height:29px;width:29px;border:0;padding:0;float:left;margin-top:10px;background:url(/images/magnifyingGlass.png) #EEE center center no-repeat;background-size:60%;outline:0;" type="button" value="")
+	div#crnBar-wrap
+		input#instantInput.material(placeholder="Type to find more courses")
+		input#instantButton.material(type="button" value="")
 		br
-		div#instantDrop.material(style="width:242px;border-radius:0;margin-left:1px;")
-		ul( id="crnBar" style="margin-top:-20px;float:left;padding-left:0;")
+		br
+		div#instantDrop.material(style="display:none")
+		ul#crnBar
 	br
 	br
-	div(id="b-builderWrap" style="float:right;margin-left:-200px;position:absolute;top:140px;left:50%;width:704px;")
-		p(style="font-family:Open Sans;font-size:23px;text-align:center;font-weight:400;color:#999;margin-top:0;") joseph's Schedule
-		div(style="float:right;width:200px;margin-top:-60px;text-align:right;padding-right:20px;")
-			//div(class="b-toolIcon" style="background-position:center left" data-toolText="Take a Picture")
-			div(class="b-toolIcon gTT-act" style="background-position:center center" data-gTTLbl="Save This Schedule")
-			div(class="b-toolIcon gTT-act" style="background-position:center right" data-gTTLbl="Generate Link")
-		input(id="b-crnInput" placeholder="Enter CRNs with a comma inbetween e.g. 10973,10981,10921")
-		div(class="b-scheduleWrap" data-crn="" style="float:left;")
-			div(class="b-dayLabelWrap")
+	div#b-builderWrap
+		p#b-scheduleTitle joseph's Schedule
+		div#b-toolWrap
+			div.b-toolIcon.gTT-act(style="background-position:center center" data-gTTLbl="Save This Schedule")
+			div.b-toolIcon.gTT-act(style="background-position:center right" data-gTTLbl="Generate Link")
+		input#b-crnInput(placeholder="Enter CRNs with a comma inbetween e.g. 10973,10981,10921")
+		div.b-scheduleWrap
+			div.b-dayLabelWrap
 				each day,index in ['','Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday']
 					div(class="b-dayLabel date-"+index)=day
 			br
-			div(class="b-timeLabelWrap")
+			div.b-timeLabelWrap
 				each time, index in ['8:00 am','9:00 am','10:00 am','11:00 am','12:00 am','1:00 pm','2:00 pm','3:00 pm','4:00 pm','5:00 pm','6:00 pm','7:00 pm','8:00 pm','9:00 pm']
 					div(class="b-timeLabel" style="top:"+((index*40)-1)+'px')=time
-			div(id="b-timeBlockWrap" class="b-timeBlockWrap")
-			div(style="font-family:Open Sans;font-weight:100;font-size:20px;width:200px;position:absolute;left:200px;top:100px;")
-	script(src="/js/build.main.js")
+			div#b-timeBlockWrap.b-timeBlockWrap
+		div#courseDescription
+		
+		div(style="display:none")
+			div#instantLoader.r-loading
+			div.r-instantContainer#instantTemplate(onclick="CORE.coursePop.show(this)")
+				div.r-instantCourse
+				div.r-instantName
+				div.r-instant-infoWrap
+					div.r-instant-description.
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+
+		
+		script(src="/js/build/CORE.js")
+		script(src="/js/build/term.js")
+		script(src="/js/build/searcher.js")
+		script(src="/js/build/coursepop.js")
+		script(src="/js/build/builder.js")
