--- a/views/user/profile.jade
+++ b/views/user/profile.jade
@@ -13,7 +13,7 @@ block bodyContent
 			p(id="p-infoTitle") Additional Info
 			p(class="p-infoSection") 
 				label(class="p-infoSectionHead") email: 
-				label(class="p-infoSectionBody") vicky@pornhub.com
+				label(class="p-infoSectionBody") vicky@blah.com
 			p(class="p-infoSection") 
 				label(class="p-infoSectionHead") username:
 				label(class="p-infoSectionBody") vicky
